# edi_tests

./: .gitignore  CMakeLists.txt  README.md  qemu.sh
app/: CMakeLists.txt
app/hw_runner/: CMakeLists.txt  link.ld
app/hw_runner/src/: bootstrap.cpp
app/qemu_runner/: link.ld
app/src/: main.cpp
cmake/: toolchain.cmake
libs/: CMakeLists.txt
libs/opencm3/: CMakeLists.txt
periphery/: listener.py
